--- a/src/index.scss
+++ b/src/index.scss
@@ -60,8 +60,18 @@ header {
   }
   .headerRight {
     display: flex;
+
     li {
       margin-right: 30px;
+      cursor: pointer;
+
+      .cart {
+        margin-right: 10px;
+      }
+
+      &:last-of-type {
+        margin-right: 0px;
+      }
     }
   }
 }
@@ -75,41 +85,7 @@ header {
 
 .sneakers {
   display: flex;
-}
-
-.card {
-  border: 1px solid #F3F3F3;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
-
-  &:hover {
-    box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
-    transform: translateY(-5px);
-  }
-
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-
-  }
-
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-
-  b {
-    font-size: 13px;
-  }
-
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
-  }
+  flex-wrap: wrap;
 }
 
 .cardBottom {
@@ -121,17 +97,6 @@ header {
     display: flex;
     flex-direction: column;
   }
-}
-
-.button {
-  box-sizing: border-box;
-  background: #FFFFFF;
-  border: 1px solid #F2F2F2;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-  cursor: pointer;
-  padding: 0;
 }
 
 .search-wrapper {
@@ -154,10 +119,15 @@ header {
     font-size: 16px;
     width: 200px;
   }
+
+  svg {
+    height: 15px;
+    cursor: pointer;
+  }
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
@@ -169,7 +139,7 @@ header {
 .drawer {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   width: 385px;
   right: 0;
   height: 100%;
@@ -189,11 +159,59 @@ header {
     }
   }
 
-  .items {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
+  .itemsContainer {
+    display: flex;
+    flex-direction: column;
+
+    height: 100%;
+
+    .items {
+      flex: 1 0 auto;
+      overflow: auto;
+      margin-bottom: 40px;
+    }
   }
+
+  .cartEmpty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex: 1 0 auto;
+
+    text-align: center;
+
+    .greenButton {
+      width: 245px;
+      margin-top: 20px;
+
+      &:hover {
+        .buttonImg {
+          transform: rotate(180deg) translateX(3px);
+        }
+      }
+
+      .buttonImg {
+        position: relative;
+        top: 1px;
+        transform: rotate(180deg);
+        margin-right: 15px;
+        transition: transform 0.15s ease-in-out;
+      }
+    }
+
+    .cartImg {
+      margin-bottom: 20px;
+    }
+
+    p {
+      width: 280px;
+      line-height: 24px;
+      opacity: 0.6;
+    }
+  }
+
+
 }
 
 .cartTotalBlock {
@@ -218,6 +236,10 @@ header {
 
   .greenButton {
     position: relative;
+
+    &:disabled {
+      animation: button-loading 0.6s ease-in-out infinite;
+    }
 
     &:hover {
       img {
@@ -245,6 +267,11 @@ header {
   font-weight: 500;
   cursor: pointer;
   transition: background 0.2s ease-in-out;
+
+  &:disabled {
+    background-color: #bebebe !important;
+    cursor: default;
+  }
 
   &:hover {
     background: lighten(#9DD558, 10%);
@@ -298,3 +325,14 @@ header {
   }
 }
 
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
